# haifa-hackathon-2022

./: README.md  bag_of_words.py  camel.py  main.py  metadata.py  pyproject.toml
