[tool.poetry]
name = "hackathon"
version = "0.1.0"
description = ""
authors = ["Roee Nizan <roeen30@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
datargs = "^0.10.1"
fn = "^0.4.3"
aiohttp = "^3.8.1"
lxml = "^4.8.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
